--- a/stratsALCKappaFriedSVMRedux.tex
+++ b/stratsALCKappaFriedSVMRedux.tex
@@ -1,21 +1,20 @@
 \begin{table}[h]
-\caption{Um contra um: cada asterisco/cruz/ponto indica quando o algoritmo na linha tem melhor ALCKappa para SVM que o algoritmo na coluna com intervalo de confiança de 0.99/0.95/0.90.}
-\begin{center}
-\begin{tabular}{lcc|cc|cc|cc|cc|cc|c}
+\caption{Um contra um (SVM). Medida: ALCKappa. \textit{Legenda na Tabela \ref{tab:friedClassif}.}}
+\begin{center}\scalebox{0.9}{\begin{tabular}{lcc|cc|cc|cc|cc|cc|c}
  			& 1 & 2 & 3 & 4 & 5 & 6 & 7 & 8 & 9 & 10 & 11 & 12 & 13\\
 1 - Rnd  	& - &   &   &   &   &   &   &   &   &   &   &   &   \\
 2 - Clu  	&   & - &   &   &   &   &   &   &   &   &   &   &   \\ \hline
-3 - Mar  	&   &   & - &   &   &   &   &   &   & + &   &   &   \\
-4 - EERent	& * & * &   & - &   & * & + &   &   & * &   & * &   \\ \hline
-5 - EERacu	&   &   &   &   & - &   &   &   &   & * &   & * &   \\
-6 - SGmulti	&   &   &   &   &   & - &   &   &   &   &   &   &   \\ \hline
+3 - Mar  	&   &   & - &   &   &   &   &   & + &   &   &   &   \\
+4 - EERent	& * & * &   & - &   & * & + &   & * & * &   &   &   \\ \hline
+5 - EERacu	&   &   &   &   & - &   &   &   & * & * &   &   &   \\
+6 - \textbf{SGmulti}	&   &   &   &   &   & - &   &   &   &   &   &   &   \\ \hline
 7 - DWeuc	&   &   &   &   &   &   & - &   &   &   &   &   &   \\
-8 - TUman	&   &   &   &   &   &   &   & - &   & . &   &   &   \\ \hline
-9 - TUmah	& * & * & * & * & * & * & * & * & - & * &   & * &   \\
-10 - ATUman	&   &   &   &   &   &   &   &   &   & - &   &   &   \\ \hline
-11 - ATUmah	& * & * & * & * & * & * & * & * &   & * & - & * &   \\
-12 - ALUman	&   &   &   &   &   &   &   &   &   &   &   & - &   \\ \hline
-13 - ALUmah	& * & * & * & * & * & * & * & * &   & * &   & * & - \\\end{tabular}
+8 - TUman	&   &   &   &   &   &   &   & - & . &   &   &   &   \\ \hline
+9 - \textbf{ATUman}	&   &   &   &   &   &   &   &   & - &   &   &   &   \\
+10 - \textbf{ALUman}	&   &   &   &   &   &   &   &   &   & - &   &   &   \\ \hline
+11 - TUmah	& * & * & * & * & * & * & * & * & * & * & - &   &   \\
+12 - \textbf{ATUmah}	& * & * & * & * & * & * & * & * & * & * &   & - &   \\ \hline
+13 - \textbf{ALUmah}	& * & * & * & * & * & * & * & * & * & * &   &   & - \\\end{tabular}}
 \label{stratsALCKappaFriedSVMRedux}
 \end{center}
 \end{table}
