--- a/stratsALCKappaFriedVFDT.tex
+++ b/stratsALCKappaFriedVFDT.tex
@@ -1,29 +1,28 @@
 \begin{table}[h]
-\caption{Um contra um: cada asterisco/cruz/ponto indica quando o algoritmo na linha tem melhor ALCKappa para VFDT que o algoritmo na coluna com intervalo de confiança de 0.99/0.95/0.90.}
-\begin{center}
-\begin{tabular}{lcc|cc|cc|cc|cc|cc|cc|cc|cc|cc|c}
+\caption{Um contra um (VFDT). Medida: ALCKappa. \textit{Legenda na Tabela \ref{tab:friedClassif}.}}
+\begin{center}\begin{tabular}{lcc|cc|cc|cc|cc|cc|cc|cc|cc|cc|c}
  			& 1 & 2 & 3 & 4 & 5 & 6 & 7 & 8 & 9 & 10 & 11 & 12 & 13 & 14 & 15 & 16 & 17 & 18 & 19 & 20 & 21\\
-1 - Rnd  	& - &   & * & * &   &   &   &   & * &   &   & + &   &   &   &   &   & . &   &   &   \\
-2 - Clu  	&   & - & * & * & + & . &   &   & * & . &   & * &   &   &   &   &   & + &   &   &   \\ \hline
+1 - Rnd  	& - &   & * & * &   &   &   &   & * &   &   &   &   &   &   &   &   & + &   & . &   \\
+2 - Clu  	&   & - & * & * & + & . &   &   & * & . &   &   &   &   &   &   &   & * &   & + &   \\ \hline
 3 - Unc  	&   &   & - &   &   &   &   &   &   &   &   &   &   &   &   &   &   &   &   &   &   \\
 4 - Ent  	&   &   &   & - &   &   &   &   &   &   &   &   &   &   &   &   &   &   &   &   &   \\ \hline
 5 - Mar  	&   &   &   &   & - &   &   &   &   &   &   &   &   &   &   &   &   &   &   &   &   \\
 6 - EERent	&   &   &   &   &   & - &   &   &   &   &   &   &   &   &   &   &   &   &   &   &   \\ \hline
 7 - EERacu	&   &   &   &   &   &   & - &   & + &   &   &   &   &   &   &   &   &   &   &   &   \\
-8 - SGmulti	&   &   & * & * & * & * & + & - & * & * & + & * &   &   &   &   &   & * &   &   &   \\ \hline
+8 - SGmulti	&   &   & * & * & * & * & + & - & * & * &   &   &   & + &   &   &   & * &   & * &   \\ \hline
 9 - DWeuc	&   &   &   &   &   &   &   &   & - &   &   &   &   &   &   &   &   &   &   &   &   \\
 10 - TUeuc	&   &   &   &   &   &   &   &   &   & - &   &   &   &   &   &   &   &   &   &   &   \\ \hline
-11 - TUman	&   &   &   &   &   &   &   &   & . &   & - &   &   &   &   &   &   &   &   &   &   \\
-12 - TUmah	&   &   &   &   &   &   &   &   &   &   &   & - &   &   &   &   &   &   &   &   &   \\ \hline
-13 - ATUeuc	&   &   & * & * & * & * & * &   & * & * & * & * & - &   &   & * & * & * &   &   &   \\
-14 - ATUman	& + &   & * & * & * & * & * &   & * & * & * & * &   & - &   & * & * & * &   &   &   \\ \hline
-15 - ATUmah	&   &   & * & * & * & * &   &   & * & * & . & * &   &   & - &   &   & * &   &   &   \\
-16 - LUeuc	&   &   &   & . &   &   &   &   & * &   &   &   &   &   &   & - &   &   &   &   &   \\ \hline
-17 - LUman	&   &   &   &   &   &   &   &   & * &   &   &   &   &   &   &   & - &   &   &   &   \\
-18 - LUmah	&   &   &   &   &   &   &   &   &   &   &   &   &   &   &   &   &   & - &   &   &   \\ \hline
-19 - ALUeuc	& + & . & * & * & * & * & * &   & * & * & * & * &   &   &   & * & * & * & - &   &   \\
-20 - ALUman	& + & . & * & * & * & * & * &   & * & * & * & * &   &   &   & * & * & * &   & - &   \\ \hline
-21 - ALUmah	&   &   & * & * & * & * & + &   & * & * & + & * &   &   &   &   &   & * &   &   & - \\\end{tabular}
+11 - ATUeuc	&   &   & * & * & * & * & * &   & * & * & - & * &   & * &   & * &   & * &   & * &   \\
+12 - LUeuc	&   &   &   & . &   &   &   &   & * &   &   & - &   &   &   &   &   &   &   &   &   \\ \hline
+13 - ALUeuc	& + & . & * & * & * & * & * &   & * & * &   & * & - & * &   & * &   & * &   & * &   \\
+14 - TUman	&   &   &   &   &   &   &   &   & . &   &   &   &   & - &   &   &   &   &   &   &   \\ \hline
+15 - ATUman	& + &   & * & * & * & * & * &   & * & * &   & * &   & * & - & * &   & * &   & * &   \\
+16 - LUman	&   &   &   &   &   &   &   &   & * &   &   &   &   &   &   & - &   &   &   &   &   \\ \hline
+17 - ALUman	& + & . & * & * & * & * & * &   & * & * &   & * &   & * &   & * & - & * &   & * &   \\
+18 - TUmah	&   &   &   &   &   &   &   &   &   &   &   &   &   &   &   &   &   & - &   &   &   \\ \hline
+19 - ATUmah	&   &   & * & * & * & * &   &   & * & * &   &   &   & . &   &   &   & * & - & * &   \\
+20 - LUmah	&   &   &   &   &   &   &   &   &   &   &   &   &   &   &   &   &   &   &   & - &   \\ \hline
+21 - ALUmah	&   &   & * & * & * & * & + &   & * & * &   &   &   & + &   &   &   & * &   & * & - \\\end{tabular}
 \label{stratsALCKappaFriedVFDT}
 \end{center}
 \end{table}
